# planora

./: .env.sample  .gitignore  Cargo.toml  README.md  pnpm-lock.yaml
api/: Cargo.toml  Dockerfile  README.md
api/migrations/: 20251027093809_users.down.sql  20251027093809_users.up.sql  20251103050836_organizations.down.sql  20251103050836_organizations.up.sql  20251103123426_projects.down.sql  20251103123426_projects.up.sql  20251110142344_tasks.down.sql  20251110142344_tasks.up.sql
api/src/: lib.rs  main.rs
api/src/common/: constants.rs  cookie.rs  error.rs  headers.rs  mod.rs  response.rs  time.rs
api/src/common/extractors/: json.rs
api/src/config/: mod.rs
api/src/db/: error.rs  helpers.rs  mod.rs
api/src/db/dto/: mod.rs  organization.rs  project.rs  user.rs
api/src/db/models/: mod.rs  organization.rs  project.rs  task.rs  user.rs
api/src/db/repos/: mod.rs  org_repo.rs  project_repo.rs  user_repo.rs
api/src/middlewares/: auth_middleware.rs  mod.rs
api/src/routes/: health.rs  mod.rs
api/src/routes/common/: error.rs  mod.rs  response.rs
api/src/routes/internal/: mod.rs  users.rs
api/src/routes/v1/: health.rs  mod.rs
api/src/routes/v1/auth/: mod.rs  profile.rs  refresh.rs  signin.rs  signout.rs  signup.rs
api/src/routes/v1/organizations/: create.rs  delete.rs  list.rs  mod.rs
api/src/routes/v1/projects/: create.rs  delete.rs  helper.rs  list.rs  mod.rs
api/src/services/: auth_service.rs  mod.rs
api/src/services/auth/: constants.rs  cookie.rs  error.rs  jwt.rs  mod.rs  service.rs
api/src/services/db/: mod.rs  pg_service.rs
api/src/telemetry/: mod.rs
api/src/ws/: mod.rs
apps/web/: .dockerignore  Dockerfile  README.md  biome.json  package.json
apps/web/src/: instrumentation.ts
apps/web/src/actions/: signin.ts  signup.ts
apps/web/src/app/: layout.tsx  not-found.tsx  page.tsx
apps/web/src/app/(site)/(auth)/: layout.tsx
apps/web/src/components/core/: motions.ts  theme-toggle.tsx
apps/web/src/components/features/home/: early-access.tsx  hero.tsx  welcome.tsx
apps/web/src/components/layout/: footer.tsx  navbar.tsx
apps/web/src/context/: app-provider.tsx  toast-provider.tsx  user-context.tsx
apps/web/src/hooks/: toast-provider.tsx
apps/web/src/lib/: config.ts  cookie.ts
apps/web/src/lib/api/: auth.ts
apps/web/src/types/: auth.ts
infra/docker/: docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml
playground/: README.md  index.html  package.json  pnpm-lock.yaml  server.js
playground/public/: script.js
playground/src/: main.jsx  script.js
(+2 files in other folders)
