[package]
name = "planora-api"
version = "0.0.1"
authors = ["sajeevan"]
edition.workspace = true
license.workspace = true

[[bin]]
name = "planora-api"
path = "src/main.rs"

[dependencies]

# web framework
actix-web = { version = "4" }
actix-cors = "0.7"
actix-ws = "0.3.0"

# serialization
serde = "1.0.228"

# telemetry
tracing = { version = "0.1.4" }
tracing-subscriber = { version = "0.3.2", features = [
    "env-filter",
    "fmt",
    "json",
] }

# misc
dotenvy = "0.15"
futures-util = "0.3.31"
