[package]
name = "arx-gatehouse"
version = "0.1.0"
authors = ["sajeevan"]
edition.workspace = true
license.workspace = true

[[bin]]
name = "arx-gatehouse"
path = "src/main.rs"

[dependencies]

# web framework
actix-web = { version = "4" }
actix-cors = "0.7"
actix-ws = "0.3.0"

# database
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "uuid",
    "chrono",
] }
sea-query = { version = "0.32.7", default-features = false, features = [
    "derive",
    "backend-postgres",
    "all-types",
] }

# async / runtime
tokio = { version = "1.48.0", features = ["sync", "signal"] }
futures-util = "0.3.31"
futures = "0.3.31"

# serialization
serde = "1.0.228"

# telemetry
tracing = { version = "0.1.4" }
tracing-subscriber = { version = "0.3.2", features = [
    "env-filter",
    "fmt",
    "json",
] }
tracing-actix-web = "0.7.19"

# misc
thiserror = "2.0.17"
dotenvy = "0.15"
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.18.1", features = ["serde"] }
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
